2003-08-16  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Changed translation code to appear in a dialog.
	Added a context menu to access translation. 
	Support space separator in the /tip command.

2003-07-31  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Changed the pane resizing so that the chat window is
	given the new space and the users window remains constant size.

2003-07-28  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Added paned window support for the Online users
	window.
	
	* tkchat.tcl: Use tk::PlaceWindow for dialog placement (+ fix to
	Tk this results in correct placement with multiple win32 desktops).

2003-07-27  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl (addMessage): Fix for the Jabber bridge nick handling.

	* tkchat.tcl (gotoURL): Try to use DDE to open URLs (avoid quoting
	problems). Also copy the URL into the CLIPBOARD selection.

	* tkchat.tcl (::tkchat::userPost): Add a /google command to launch
	google queries with the remaining text.

	* tkchat.tcl (::tkchat::About): Added help text for the commands.

	* tkchat.tcl (::thchat::ShowSmilies): Add {} to expr body.
	
2003-07-17  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkchat.tcl: correct display of URLs with & in them on Windows.
	Make the /bug use gotoURL now. [Bug 758596] (theado)

2003-07-01  Pascal Scheffers  <pascal@scheffers.net>
	* tkchat.tcl: Update so /me messages from ircbridge show up
	correctly again. Changed the old regexp so it matches at the
	beginning only.

2003-05-13  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkchat.tcl: simplify find stuff, add support for
	"/bug ?group? ?tracker? id" requests that print correct URL.  We
	can't use gotoURL until exec handles &'s in args correctly.

2003-04-30  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl (getRecentLines): Fix for bug #729709: alerts no
	longer working. The ActionStart regexp was being too greedy.